--- a/frontend/src/components/Navigation/styles.scss
+++ b/frontend/src/components/Navigation/styles.scss
@@ -16,6 +16,9 @@
     width: 100%;
     height: 77px;
     padding: 25px 40px;
+    @include breakpoint("phone") {
+      padding: 5px 5px;
+    };
     .column {
       display: flex;
       justify-content: center;
@@ -28,6 +31,11 @@
       }
       &:first-child {
         justify-content: flex-start;
+      }
+      &:last-child {
+        @include breakpoint("phone") {
+          display: none;
+        };
       }
       .logo {
         max-width: 150px;
