--- a/frontend/src/components/Event/styles.scss
+++ b/frontend/src/components/Event/styles.scss
@@ -1,9 +1,14 @@
+.loading,
+.not-found {
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  padding: 100px 0;
+}
 .event {
   min-height: 500px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-flow: column wrap;
   width: 100%;
   max-width: $max-page-width;
   margin: 0 auto;
