--- a/frontend/src/components/Feed/styles.scss
+++ b/frontend/src/components/Feed/styles.scss
@@ -1,10 +1,15 @@
-.feed {
-  min-height: 500px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-flow: column wrap;
+.loading,
+.not-found {
   width: 100%;
-  max-width: $max-page-width;
-  margin: 0 auto;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  padding: 100px 0;
+}
+.feed {
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
 }
