--- a/frontend/src/components/Search/styles.scss
+++ b/frontend/src/components/Search/styles.scss
@@ -1,8 +1,13 @@
-.search {
-  display: flex;
-  flex-direction: column;
+.loading,
+.not-found {
   width: 100%;
-  max-width: $max-page-width;
-  margin: 0 auto;
+  height: 100%;
+  display: flex;
+  justify-content: center;
   align-items: center;
+  padding: 100px 0;
+}
+.search {
+  width: 100%;
+  height: 100%;
 }
