--- a/frontend/src/config/_colors.scss
+++ b/frontend/src/config/_colors.scss
@@ -2,5 +2,6 @@ $bg-color: #fafafa;
 $dark-blue: #003569;
 $light-blue: #3897f0;
 $light-grey: #efefef;
+$middle-grey: #ccc;
 $dark-grey: #999;
 $main-pink: #e83862;
