--- a/frontend/src/components/Landing/styles.scss
+++ b/frontend/src/components/Landing/styles.scss
@@ -1,5 +1,6 @@
 .landing {
   .landing-full {
+    padding-top: 50px;
     height: 100vh;
     width: 100%;
     display: flex;
@@ -24,7 +25,7 @@
       font-weight: 700;
       letter-spacing: 2px;
       @include breakpoint("phone-tablet"){
-        font-size: 17px;
+        font-size: 20px;
         letter-spacing: 1.5px;
       };
       color: $main-pink;
@@ -49,6 +50,9 @@
           font-weight: 300;
           letter-spacing: 1px;
         }
+      }
+      .button-send:hover {
+        opacity: 0.8;
       }
     }
   }
