--- a/frontend/src/components/Landing/styles.scss
+++ b/frontend/src/components/Landing/styles.scss
@@ -8,10 +8,14 @@
     justify-content: center;
     align-items: center;
     background-image: url("images/lisztfever_bg3.jpg");
-    background-position: 70% 50%;
+    background-position: center;
     background-repeat: no-repeat;
+    background-color: black;
+    background-size: cover;
     @include breakpoint("phone-tablet"){
       background-size: 1300px;
+      background-position: 70% 50%;
+      background-size: cover;
     };
     .landing-main__logo {
       max-width: 600px;
