--- a/frontend/src/components/Feed/styles.scss
+++ b/frontend/src/components/Feed/styles.scss
@@ -8,9 +8,12 @@
   padding: 100px 0;
 }
 .feed {
-  max-width: $max-page-width;
+  max-width: 970px;
   width: 100%;
   height: 100%;
+  display: flex;
   justify-content: center;
   align-items: center;
+  margin: auto;
+  flex-direction: column;
 }
