--- a/frontend/src/components/NotFound/styles.scss
+++ b/frontend/src/components/NotFound/styles.scss
@@ -5,29 +5,30 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  background-color: $middle-grey;
+  background-image: url("images/lisztfever_bg3.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-color: black;
+  background-size: cover;
   color: $main-pink;
-  &:first-child {
+  .column {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     .not-found__error {
-      font-size: 80px;
-      margin-bottom: 20px;
-      @include breakpoint("phone-tablet"){
-        font-size: 50px;
-        margin-bottom: 10px;
-      };
+      font-size: 100px;
+      font-weight: 800;
     }
     .not-found__text {
-      font-size: 20px;
-      display: flex;
-      justify-content: flex-end;
-      @include breakpoint("phone-tablet"){
-        font-size: 15px;
-      };
+      font-size: 25px;
     }
-  }
-  .column {
+    &:first-child {
+      margin-bottom: 50px;
+    }
+    .button {
+      text-align: center;
+    }
     a {
       margin-left: 30px;
       text-decoration: none;
@@ -43,3 +44,25 @@
     }
   }
 }
+
+
+// &:first-child {
+//   display: flex;
+//   flex-direction: row;
+//   .not-found__error {
+//     font-size: 80px;
+//     margin-bottom: 20px;
+//     @include breakpoint("phone-tablet"){
+//       font-size: 50px;
+//       margin-bottom: 10px;
+//     };
+//   }
+//   .not-found__text {
+//     font-size: 20px;
+//     display: flex;
+//     justify-content: flex-end;
+//     @include breakpoint("phone-tablet"){
+//       font-size: 15px;
+//     };
+//   }
+// }
